<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2017 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string name="app_name">CloudXR ARCore Client</string>
  <string name="host_cloud_anchor_str">Host a cloud anchor</string>
  <string name="cloud_anchor_id_str">Cloud anchor id:</string>
  <string name="cloud_server_ip_str">Enter CloudXR server IP:</string>
  <string name="webrtc_room_id_str">WebRtc room id:</string>
  <string name="webrtc_server_ip_str">Enter WebRTC server IP:</string>
  <string name="webrtc_enable_mediapipe">Enable gesture</string>
  <string name="button_stop">STOP</string>
  <string name="button_start">START</string>
</resources>
