<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="?dialogPreferredPadding">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/cloud_server_ip_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud_server_ip_str" />

        <EditText
            android:id="@+id/cloud_server_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@+id/cloud_server_ip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/cloud_anchor_id_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud_anchor_id_str" />

        <EditText
            android:id="@+id/cloud_anchor_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@+id/cloud_anchor_id" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/webrtc_server_ip_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/webrtc_server_ip_str" />

        <EditText
            android:id="@+id/webrtc_server_ip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/webrtc_room_id_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/webrtc_room_id_str" />

        <EditText
            android:id="@+id/webrtc_room_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@+id/webrtc_room_id" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <CheckBox
            android:id="@+id/host_cloud_anchor_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:checked="false"
            android:text="@string/host_cloud_anchor_str" />

        <CheckBox
            android:id="@+id/mediaPipe_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:checked="false"
            android:text="@string/webrtc_enable_mediapipe" />
    </LinearLayout>
</ScrollView>
